# NiaNetVAE

./: .aiignore  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile_DEBUG  Dockerfile_POETRY  README.md  evaluate.py  log.py  lstm_vae_run.py  main.py  nianetvae.sh  pyproject.toml  recreate_model_from_solution.py  requirements.txt  rnn_vae_run.py  setup.py  slurm-script.sh  vae.py  vae_example.py  vae_run.py
arff2pandas/: __init__.py
configs/: ecg5000_config.yaml  kpi_config.yaml  lstm_vae.yaml  main_config.yaml  metropt_config.yaml  msl_config.yaml  nab_config.yaml  rnn_vae.yaml  smap_config.yaml  smd_config.yaml  swat_config.yaml  ucr_config.yaml  vae.yaml  wadi_config.yaml  yahoo_a1_config.yaml  yahoo_config.yaml
dataloaders/: __init__.py  mnist.py  time_series.py
datasets/: lstm_vae_dataset.py  time_series.py  vae_dataset.py
experiments/: __init__.py  lstm_vae_experiment.py  rnn_vae_experiment.py  vae_experiment.py
helpers/: generate_cycle_manifest.py  recreate_model_from_solution.py
models/: __init__.py  lstm_vae.py  rnn_vae.py  vanilla_vae.py
nianetvae/: rnn_vae_architecture_search.py  vae_run.py
niapy_extension/: __init__.py
slurm_scripts/: build_cycle_manifest.sbatch  prepare_and_submit_HPC_job.sh  run_per_maint_job.sbatch  slurm-script.sh  submit_per_maint_pipeline.sh  train_per_maint_cycles.sbatch
storage/: __init__.py  database.py
tests/: test_cycle_manifest_v2.py  test_fitness_zero_error.py  test_metropt_dataloader.py  test_model.py  test_objective_contract.py  test_objective_engine.py  test_objective_persistence.py  (+3 more)
(+37 files in other folders)
